      initial implementation. (CNY-671)
    * All source actions, when given a URL that starts with "mirror://",
      will search a set of mirrors based on files in the mirrorDirs
      configuration entry, with default files provided in the
      /etc/conary/mirrors/ directory. Thanks to Pavel Volkovitskiy for
      the initial implementation. (CNY-171)

Changes in 1.0.24:
  o Server Changes:
    * The server binary access log can now be downloaded by an
      administrator by visiting the http://servername/conary/log
      URL. Once the log is accessed it is rotated automatically by the
      repository server. Subsequent accesses to the log URL will only
      yield log entries added since the last access. (CNY-638)
    * The Users and Groups tab in the web management UI is no longer
      highlighted when administrators change their passwords.

  o Client Changes:
    * A --what-provides option has been added to "conary query" and
      "conary repquery".
    * A bug that installed extra components of a package that is being
      installed instead of updated due to the existing package being
      pinned has been fixed. (CNY-682)

  o Build Changes:
    * When pulling files out of a src.rpm file, Conary now stores the
      src.rpm file itself in the repository rather than the files
      pulled from it. (CNY-684)
    * Mono dependency version mappings are now discovered in CIL policy
      .config files. (CNY-686)
    * The internal util.literalRegex() function has been replaced by
      use of re.escape(). (CNY-634)

  o Bug Fixes:
    * The Conary Repository web interface no longer returns a
      HTTP_FORBIDDEN (403) when a bad password is given by the user.
      This allows the user to re-try authentication.
    * The --signatures and --buildreqs flags now work with "conary
      showcs".  (CNY-642)
    * A bug in the NetworkRepositoryClient default pwPrompt mechanism
      has been fixed.
    * Error messages when entitlements fail to load have been